# PoCs0201_SupersonicAtomizer

./: .dockerignore  .env.example  .gitignore  01_SpecificationOfSupersonicAtmizer [自動保存済み].pptx  01_SpecificationOfSupersonicAtmizer.pptx  02_SupersonicAtmizer-DevMemo.pptx  Dockerfile  README.md  README_API.md  README_SDD.md  compose.yml  debug_solve.py  pyproject.toml  requirements.txt  run10_uv_sync.bat  run10_uv_sync.sh  run10_uv_venv.bat  run10_uv_venv.sh  run11_uv_run.bat  run11_uv_run.sh  run11_uv_sync.bat  run11_uv_sync.sh  run12_app_start.bat  run12_app_start.sh  run12_uv_test.bat  run12_uv_test.sh  run13_uv_add.bat  run13_uv_add.sh  run13_uv_run.bat  run13_uv_run.sh  run14_uv_add_dev.bat  run14_uv_add_dev.sh  run14_uv_test.bat  run14_uv_test.sh  run15_uv_add_dev.bat  run15_uv_add_dev.sh  run16_uv_add_prd.bat  run16_uv_add_prd.sh  run17_uv_sync.bat  run17_uv_sync.sh  (+15 more)
.github/: copilot-instructions.md
cases/: TEST001.yaml  TEST002.yaml  TEST003_LavalNozzle.yaml  TEST_ModelUpdated2.yaml
docs/: DEV_OPENAI.md  P1-T03_development-tooling.md  P1-T04_error-taxonomy.md  P1-T05_run-artifacts.md  P10-T01_mvp-example-case-set.md  P10-T02_example-yaml-conventions.md  P10-T04_developer-extension-guidance.md  P10-T05_assumptions-limitations-summary.md  P11_runtime-config-foundations.md  P12_runtime-domain-models.md  P13_geometry-grid-runtime.md  P14_thermo-runtime-foundations.md  P15_application-cli-scaffolding.md  P16_gas-solver-runtime.md  P17_droplet-transport-runtime.md  P18_breakup-runtime.md  P19_result-outputs-plotting.md  P2-T01_yaml-schema.md  (+91 more)
(+255 files in other folders)
