[project]
name = "supersonic-atomizer"
version = "0.1.0"
description = "Quasi-1D compressible flow + droplet transport + Weber-threshold breakup simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "matplotlib",
    "streamlit>=1.56.0",
]

[project.scripts]
supersonic-atomizer = "supersonic_atomizer.cli.main:run_cli"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supersonic_atomizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
