[project]
name = "supersonic-atomizer"
version = "0.1.0"
description = "Quasi-1D compressible flow + droplet transport + Weber-threshold breakup simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "matplotlib",
    "iapws>=1.5.4",
    "streamlit>=1.56.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
supersonic-atomizer = "supersonic_atomizer.cli.main:run_cli"

[dependency-groups]
dev = [
    "pytest",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supersonic_atomizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
